# banco-imobiliario

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
banco_imobiliario/: __main__.py  handlers.py  models.py
tests/: test_handlers.py  test_models.py
