[tool.poetry]
name = "banco-imobiliario"
version = "0.1.0"
description = "Banco Imobiliário"
authors = ["Paulo Tinoco <paulovictortinoco@gmail.com>"]
license = "GPLv3"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vv --cov-report=term-missing --cov=banco_imobiliario --cov-branch"

[tool.coverage.report]
omit = [
    "banco_imobiliario/__main__.py",
]

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
black = {version = "^22.8.0", allow-prereleases = true}
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
